@@ -28,117 +28,84 @@ subroutine find_surfaces(xyz, numRealPt, numSurface, tiltMax, &
     iunit2, tiltNew, igroup, ifComp, tiltAdd, znew, znewInput, imageBinned)
   implicit none
   real*4 xyz(3,*), tiltMax, tiltNew, tiltAdd, bintcpMinus, bintcp, znew, znewInput
-  integer*4 numRealPt, numSurface, iunit2, ifComp, imageBinned, maxReal
-  real*4, allocatable :: xx(:), yy(:), zz(:), zrot(:)
-  integer*4, allocatable :: icheck(:)
+  integer*4 numRealPt, numSurface, iunit2, ifComp, imageBinned
+  real*4 xmat(numRealPt, 4)
   integer*4 igroup(*)
-  integer*4 i, iun, numIter, iter, ipt, numPntMinus, numPntPlus, iterLim, limCheck
-  real*4 aSlope, bSlope, alpha, slope, resid, truePlus, slopeAvg, alphaAvg, theta
-  real*4 sinTheta, cosAlpha, sinAlpha, zmin, zmax, zp, zmiddle, aslopeMinus
-  real*4 slopeMinus, residMinus, err, resMax, res, errNew, thick, trueMinus
-  real*4 shiftInc, shiftTot, botExtreme, topExtreme, cosTheta, bslopeMinus, alphaMinus
-  integer*4 iptMax, ifCheck, numCheck
-  logical changed
-
+  integer*4 i, iun, numPntMinus, numPntPlus
+  real*4 aSlope, bSlope, alpha, slope, resid, truePlus
+  real*4 residMinus, residPlus, thick
+  real*4 shiftInc, shiftTot, botExtreme, topExtreme
   integer*4 surfaceSort
-  real*4 cosd, sind, atand
   !
   ! first fit a line to all of the points to get starting angle
   !
-  maxReal = numRealPt + 10
-  allocate( xx(maxReal), yy(maxReal), zz(maxReal), zrot(maxReal), &
-      icheck(maxReal / 2), stat = iter)
-  if (iter .ne. 0) then
-    write(*,'(/,a)') 'ERROR: find_surfaces - failure to allocate memory for arrays'
-    call exit(1)
-  endif
   do i = 1, numRealPt
-    xx(i) = xyz(1, i)
-    yy(i) = xyz(2, i)
-    zz(i) = xyz(3, i)
+    xmat(i, 1) = xyz(1, i)
+    xmat(i, 2) = xyz(2, i)
+    xmat(i, 3) = xyz(3, i)
     igroup(i) = 0
   enddo
-  call lsfit2Resid(xx, yy, zz, numRealPt, aSlope, bSlope, bintcp, alpha, slope, &
-      resid, botExtreme, topExtreme)
+  call lsfit2Resid(xmat(1, 1), xmat(1, 2), xmat(1, 3), numRealPt, aSlope, bSlope, &
+      bintcp, alpha, slope, resid, botExtreme, topExtreme)
 
   do iun = 6, iunit2
-    write(iun, '(/,a,//,a,//,a,/,a,f8.4)') ' SURFACE ANALYSIS:', &
+    write(iun, '(/,a,//,a,//,a,i4,a,/,a,f11.2)')' SURFACE ANALYSIS:', &
         ' The following parameters are appropriate if fiducials' &
-        //' are all on one surface', &
-        ' Fit of one plane to all fiducials:', &
-        ' Adjusted slope =', slope
+        //' are NOT on two surfaces:', &
+        ' Fit of one plane to all ', numRealPt, ' fiducials:', &
+        ' Mean residual =    ', resid
+    if (numRealPt < 3) then
+      write(iun, 99) ' Too few points to estimate tilt angle change or X-axis tilt'
+99    format(a)
+    else
+      write(iun, '(a, f8.4)') ' Adjusted slope =      ', slope
+      if (numRealPt < 4) then
+        write(iun, 99) ' Too few points to estimate X-axis tilt'
+      else
+        write(iun, '(a, f10.2)') ' X axis tilt needed =', -alpha
+      endif
+      call calcTiltNew(slope, tiltMax, iunit2, truePlus, ifComp, tiltAdd)
+    endif
   enddo
   !
-  ! if there are supposed to be 2 surfaces, enter an iterative procedure
-  ! that rotates points based on the current average slope (initially
-  ! the slope of the fit to all points, later the average of slopes for
-  ! the top and bottom surfaces), finds the midpoint of the range of
-  ! rotated Z values, assigns points to the lower or upper surface based
-  ! on this midpoint, and fits lines to lower and upper surface points.
+  ! if there are supposed to be 2 surfaces, call the surfaceSort routine to get them
+  ! sorted out.  Then fit a pair of parallel planes to both surfaces
   !
-  if (numSurface > 1) then
-    call calcTiltNew(slope, tiltMax, iunit2, truePlus, ifComp, tiltAdd)
+  if (numSurface > 1 .and. numRealPt > 3) then
+    if (surfaceSort(xyz, numRealPt, 0, igroup) .ne. 0) &
+      call exitError('Allocating memory in surfaceSort')
+
+    call twoSurfaceFits(xyz, igroup, numRealPt, xmat, numPntMinus, bintcpMinus, &
+        residMinus, numPntPlus, aSlope, bSlope, bintcp, residPlus, alpha, slope, resid, &
+        botExtreme, topExtreme)
+
     do iun = 6, iunit2
-      write(iun, '(a,/,a,/)') ' The following '// &
-          'parameters are provided to indicate the consistency', &
-          ' of the fit when fiducials are on two surfaces'
+      write(iun, '(a,/,a)') ' The following '// &
+          'parameters are appropriate if fiducials ARE on two surfaces,', &
+          ' based on fit of two parallel planes to fiducials sorted onto two surfaces:'
+      write(iun, 101) 'bottom', numPntMinus, residMinus, bintcpMinus
+101   format(/, ' On ',a,' surface:',/, &
+          ' # of points = ',i12,/, &
+          ' Mean residual =',f11.2,/, &
+          ' Z axis intercept =',f8.1)
+      write(iun, 101) 'top', numPntPlus, residPlus, bintcp
+      thick = bintcp - bintcpMinus
+      write(iun, 102)resid, thick, slope
+102   format(/,' Overall mean residual =',f15.2,/, &
+          ' Thickness at Z intercepts =',f11.1,/, &
+          ' Adjusted slope =',f22.4)
+      if (numRealPt > 4) then
+        write(iun, '(a, f18.2)') ' X axis tilt needed =', -alpha
+      else
+        write(iun, 99) ' Too few points to estimate X-axis tilt'
+      endif
     enddo
-
-    if (surfaceSort(xyz, numRealPt, 0, igroup) .ne. 0) then
-      write(*,'(/,a)') 'ERROR: find_surfaces - Allocating memory in surfaceSort'
-      call exit(1)
-    endif
-
-    call twoSurfaceFits(xyz, igroup, numRealPt, xx, yy, zz, numPntMinus, aslopeMinus, &
-        bslopeMinus, bintcpMinus, alphaMinus, slopeMinus, residMinus, numPntPlus, &
-        aSlope, bSlope, bintcp, alpha, slope, resid, slopeAvg, alphaAvg, botExtreme, &
-        topExtreme)
-
-    ! write(*,101) numPntMinus, bintcpMinus, slopeMinus, romi
-    ! write(*,101) numPntPlus, bintcp, slope, ro
-    !
-    call twoSurfaceFits(xyz, igroup, numRealPt, xx, yy, zz, numPntMinus, aslopeMinus, &
-        bslopeMinus, bintcpMinus, alphaMinus, slopeMinus, residMinus, numPntPlus, &
-        aSlope, bSlope, bintcp, alpha, slope, resid, slopeAvg, alphaAvg, botExtreme, &
-        topExtreme)
-    !
-    if (numPntMinus > 1) then
-      do iun = 6, iunit2
-        write(iun, 101) 'bottom', numPntMinus, bintcpMinus, slopeMinus, residMinus, &
-            -alphaMinus
-101     format(' Fit of one plane to points on ',a,' surface:',/, &
-            ' # of points = ',i6,/,' Z axis intercept =',f8.2,/, &
-            ' Adjusted slope =' ,f10.4,/,' Mean residual =',f11.3,/, &
-            ' X axis tilt needed =',f6.2)
-      enddo
-      call calcTiltNew(slopeMinus, tiltMax, iunit2, trueMinus, ifComp, tiltAdd)
-    endif
+    call calcTiltNew(slope, tiltMax, iunit2, tiltNew, ifComp, tiltAdd)
   else
     numPntPlus = numRealPt
-  endif
-  if (numPntPlus > 1) then
-    do iun = 6, iunit2
-      write(iun, 101) 'top', numPntPlus, bintcp, slope, resid, -alpha
-    enddo
-    call calcTiltNew(slope, tiltMax, iunit2, truePlus, ifComp, tiltAdd)
-  endif
-  if (numSurface == 1) then
     tiltNew = truePlus
-  else
-    !
-    ! but just return distance between intercepts
-    !
-    thick = bintcp - bintcpMinus
-    do iun = 6, iunit2
-      print *,'The following parameters combine the last two '// &
-          'results and are', 'appropriate if fiducials are on'// &
-          ' two surfaces'
-      write(iun, 102) thick, slopeAvg, -alphaAvg
-102   format(/,' Thickness at Z intercepts =',f11.2,/, &
-          ' Average adjusted slope =',f14.4,/, &
-          ' Average X axis tilt needed =',f10.2)
-    enddo
-    call calcTiltNew(slopeAvg, tiltMax, iunit2, tiltNew, ifComp, tiltAdd)
+    if (numSurface > 1) write(*,'(/,a,/)') &
+        ' There are too few points to analyze for distribution on two surfaces'
   endif
   !
   ! Get the unbinned thickness and shifts needed to center the gold
@@ -157,84 +124,87 @@ subroutine find_surfaces(xyz, numRealPt, numSurface, tiltMax, &
         ' Total unbinned shift needed to center range of fiducial', &
         's in Z =',f14.1)
   enddo
-  deallocate( xx, yy, zz, zrot, icheck, stat = iter)
   return
 end subroutine find_surfaces
 
 
-subroutine twoSurfaceFits(xyz, igroup, numRealPt, xx, yy, zz, numPntMinus, aslopeMinus, &
-    bslopeMinus, bintcpMinus, alphaMinus, slopeMinus, residMinus, numPntPlus, aSlope, &
-    bSlope, bintcp, alpha, slope, resid, slopeAvg, alphaAvg, botExtreme, topExtreme)
+subroutine twoSurfaceFits(xyz, igroup, numRealPt, xmat, numPntMinus, &
+    bintcpMinus, residMinus, numPntPlus, aSlope, &
+    bSlope, bintcp, residPlus, alpha, slope, resid, botExtreme, topExtreme)
   implicit none
-  real*4 xyz(3,*), xx(*), yy(*), zz(*), aslopeMinus, bslopeMinus, bintcpMinus, alphaMinus
-  real*4 residMinus, aSlope, bSlope, bintcp, alpha, slope, resid, slopeAvg, alphaAvg
-  real*4 devMin, devMax, botExtreme, topExtreme, slopeMinus
-  integer*4 igroup(*), numPntMinus, numRealPt, numPntPlus
-  integer*4 ipt
-  real*4 xxMinus, yyMinus, zzMinus
+  real*4 xyz(3,*), bintcpMinus
+  real*4 xmat(numRealPt, 4), work(16), coeff(4), xmean(4), xsd(4)
+  real*4 residMinus, residPlus, aSlope, bSlope, bintcp, alpha, slope, resid
+  real*4 botExtreme, topExtreme, dev
+  integer*4 igroup(*), numPntMinus, numRealPt, numPntPlus, numCol
+  integer*4 ipt,i
+  integer*4 multRegress
+  real*4 atand, cosd, sind
   !
   ! first fit a plane to points in the first group
   !
+  numCol = 3
+  if (numRealPt < 4) numCol = 2
   numPntMinus = 0
+  numPntPlus = 0
+
+  ! Load the data matrix, putting the Y data in column 2 and overlaying with group
+  ! number if there are only two columns
   do ipt = 1, numRealPt
     if (igroup(ipt) == 1) then
       numPntMinus = numPntMinus + 1
-      xx(numPntMinus) = xyz(1, ipt)
-      yy(numPntMinus) = xyz(2, ipt)
-      zz(numPntMinus) = xyz(3, ipt)
-    endif
-  enddo
-  if (numPntMinus > 1) then
-    call lsfit2Resid(xx, yy, zz, numPntMinus, aslopeMinus, bslopeMinus, bintcpMinus, &
-        alphaMinus, slopeMinus, residMinus, devMin, devMax)
-    botExtreme = bintcpMinus + devMin
-  else
-    xxMinus = xx(1)
-    yyMinus = yy(1)
-    zzMinus = zz(1)
-  endif
-  !
-  ! next fit a plane to points in the second group
-  !
-  numPntPlus = 0
-  do ipt = 1, numRealPt
-    if (igroup(ipt) == 2) then
+    else
       numPntPlus = numPntPlus + 1
-      xx(numPntPlus) = xyz(1, ipt)
-      yy(numPntPlus) = xyz(2, ipt)
-      zz(numPntPlus) = xyz(3, ipt)
     endif
+    xmat(ipt, 1) = xyz(1, ipt)
+    xmat(ipt, 2) = xyz(2, ipt)
+    xmat(ipt, numCol) = igroup(ipt) - 1
+    xmat(ipt, numCol + 1) = xyz(3, ipt)
   enddo
-  if (numPntPlus > 1) then
-    call lsfit2Resid(xx, yy, zz, numPntPlus, aSlope, &
-        bSlope, bintcp, alpha, slope, resid, devMin, devMax)
-    topExtreme = bintcp + devMax
-  endif
-  !
-  ! get slope and intercept of each line, even if only 1 point
-  !
-  if (numPntMinus == 1) then
-    slopeMinus = slope
-    bintcpMinus = zzMinus - yyMinus * bSlope - xxMinus * aSlope
-    alphaMinus = alpha
-    botExtreme = bintcpMinus
-  endif
-  if (numPntPlus == 1) then
-    slope = slopeMinus
-    bintcp = zz(1) - yy(1) * bslopeMinus - xx(1) * aslopeMinus
-    alpha = alphaMinus
-    topExtreme = bintcp
-  endif
-  slopeAvg = (numPntPlus * slope + numPntMinus * slopeMinus) / numRealPt
-  alphaAvg = (numPntPlus * alpha + numPntMinus * alphaMinus) / numRealPt
+
+  if (multRegress(xmat, numRealPt, 0, numCol, numRealPt, 1, 0, coeff, 4, bintcpMinus,  &
+      xmean, xsd, work) .ne. 0) call exitError( &
+      'IN MATRIX INVERSION FOR FITTING PLANES TO 3-D POINTS')
+
+  ! Compute a single slope and angles
+  bintcp = bintcpMinus + coeff(numCol)
+  coeff(numCol) = 0.
+  aSlope = coeff(1)
+  bSlope = 0.
+  if (numCol == 3) bSlope = coeff(2)
+  alpha = atand(bSlope)
+  slope = coeff(1) / (cosd(alpha) - bSlope * sind(alpha))
+
+  ! Get averall mean residual and mean for each surface, and the extreme residual above
+  ! top and below bottom assuming pitch gets corrected
+  resid = 0.
+  residPlus = 0.
+  residMinus = 0.
+  botExtreme = 1.e30
+  topExtreme = -1.e30
+  do ipt = 1, numRealPt
+    if (igroup(ipt) == 1) then
+      dev = xyz(3, ipt) - (xyz(1, ipt) * aSlope + xyz(2, ipt) * bSlope + bintcpMinus)
+      residMinus = residMinus + abs(dev)
+      botExtreme = min(botExtreme, bintcpMinus + dev)
+    else
+      dev = xyz(3, ipt) - (xyz(1, ipt) * aSlope + xyz(2, ipt) * bSlope + bintcp)
+      residPlus = residPlus + abs(dev)
+      topExtreme = max(topExtreme, bintcp + dev)
+    endif
+    resid = resid + abs(dev)
+  enddo
+  resid = resid / numRealPt
+  residPlus = residPlus / numPntPlus
+  residMinus = residMinus / numPntMinus
+
   return
 end subroutine twoSurfaceFits
 
-! DNM 5 / 3 / 02: give the new maximum tilt angle only for compression
+! DNM 5/3/02: give the new maximum tilt angle only for compression
 ! solutions
 !
-subroutine calcTiltNew(slopeMinus, tiltMax, iunit2, trueMinus, ifComp, &
-    tiltAdd)
+subroutine calcTiltNew(slopeMinus, tiltMax, iunit2, trueMinus, ifComp, tiltAdd)
   implicit none
   real*4 slopeMinus, tiltMax, trueMinus, tiltAdd
   integer*4 iunit2, ifComp
@@ -272,15 +242,15 @@ subroutine lsfit2Resid(x, y, z, n, a, b, c, alpha, slope, resid, devMin, devMax)
   integer*4 n, i
   real*4 sind, cosd, atand
 
-  if (n > 2) then
+  if (n > 3) then
     call lsfit2(x, y, z, n, a, b, c)
-  elseif (n > 1) then
+  elseif (n > 2) then
     b = 0.
     call lsfit(x, z, n, a, c, ro)
   else
     a = 0.
     b = 0.
-    c = z(1)
+    c = (z(1) + z(n)) / 2.
   endif
   resid = 0.
   devMin = 1.e10
